--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,107 @@
 body {
+  background-color: #393e74;
+  color:white;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Poppins", sans-serif;
 }
+.movie-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  background-image:linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)),url(/src/img/kino-filmy.jpg);
+  background-size: cover;
+  padding:30px;
+  filter: brightness(100%);
+}
+.movie {
+  width: 270px;
+  margin: 16px;
+  background-color: cornflowerblue;
+  border-radius: 5px;
+  border: #03162f solid 2px;
+}
+.movie img{
+  max-width: 100%;
+}
+.dark{
+  border-radius: 20px;
+  font-size: 30px;
+  color:black;
+  font-weight: 500;
+  margin: 15px;
+}
+.button{
+  width: 300px;
+  border-radius: 20px;
+  font-size: 30px;
+  text-decoration: none;
+  color:black;
+  font-weight: 500;
+  margin: 0 40%;
+}
+.pages {
+  margin: 20px 0;
+}
+  .page, .current-page{
+    border: 1px solid lightgrey;
+    border-radius: 100%;
+    padding: 5px 10px;
+    margin: 0 10px;
+    cursor: pointer;
+    color: white;
+  }
+  .current-page{
+    border:2px solid gray;
+    font-weight: 700;
+  }
 
+.film{
+  background-image:linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)),url(/src/img/kino-filmy.jpg);
+  background-size: cover;
+  padding:100px 30px 300px 100px;
+  filter: brightness(100%);
+  height: 300px;
+}
+.movie-info{
+  display: flex;
+  padding: 16px;
+  align-items: center;
+  justify-content: space-between;
+  color: white;
+  font-size: 20px;
+}
+.all-info{
+  padding: 16px;
+  align-items: center;
+  font-size: 20px;
+}
+.movie-info h3{
+  font-size: 20px;
+}
+.movi-info h3{
+  margin: 0;
+}
+.d-flex{
+  display: flex;
+  color: #ffffff;
+}
+.f-w{
+  font-weight: normal;
+  font-size: 15px;
+}
+.marg{
+  margin: 20px;
+}
+.padding{
+  padding: 20px;
+}
+.italic{
+  font-style: italic;
+  font-weight: 500;
+}
+.text-white{
+  color: white;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
